# kalc-lib

./: Cargo.toml  README.md  kalc.1
src/: cas.rs  complex.rs  fraction.rs  functions.rs  graph.rs  help.rs  lib.rs  load_vars.rs  math.rs  misc.rs  options.rs  parse.rs  print.rs  tests.rs  types.rs  units.rs
src/macros/: impls.rs
src/types/: cdecimal.rs  cf32.rs  cf64.rs  complex.rs  decimal.rs  f64.rs  float.rs  integer.rs  rug.rs
