[package]
name = "kalc-lib"
description = "a complex numbers, 2d/3d graphing, arbitrary precision, vector/matrix, cli calculator with real-time output and support for units"
license = "GPL-3.0-only"
authors = ["bgkillas <mswalhelm@gmail.com>"]
readme = "README.md"
keywords = ["cli", "calculator"]
categories = ["command-line-interface", "command-line-utilities", "mathematics"]
repository = "https://github.com/bgkillas/kalc"
rust-version = "1.85.0"
version = "1.5.1"
edition = "2024"

[features]
default=["rug", "serde", "fastnum", "rayon", "fastrand"]
bin-deps=["dep:crossterm","dep:dirs","dep:term_size","dep:libc"]
fastnum=["dep:fastnum"]
rug=["dep:rug", "dep:gmp-mpfr-sys"]
serde=["dep:serde"]
force-cross=["gmp-mpfr-sys/force-cross"]
system-libs=["gmp-mpfr-sys/use-system-libs"]
rayon=["dep:rayon"]
fastrand=["dep:fastrand"]
gnuplot=[]

[profile.release]
lto = true
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies]
fastrand = {version="2.3.0",optional = true}
rug = {version="1.28.0",features = ["serde"], optional = true}
gmp-mpfr-sys = {version="1.6.8",optional = true}
rayon = {version="1.11.0",optional = true}
crossterm = {version= "0.29.0",optional=true}
dirs = {version="6.0.0",optional=true}
serde = { version = "1.0.228", features = ["derive"], optional = true }
fastnum = { version = "0.2.10", features = ["serde"], optional = true}

[target.'cfg(not(unix))'.dependencies]
term_size = {version="0.3.2",optional=true}

[target.'cfg(unix)'.dependencies]
libc = {version="0.2.177",optional=true}
